--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
  <p>备用地址：  <a href="http://if.itclub.qqadg.com"target="_blank" rel="noopener">if.itclub.qqadg.com</a></p>
 			
         </div>
+		<br><br><br>
+		<p style="font-size:12px" >保存二维码导航主页：dg.wigcw.cn 永不迷路 &nbsp;（可截图保存）</p>
+		<img src="img/qrcode.png" /> 
+		
     </main>
     <footer class="container">
         <div>© 2022 别不快乐DG</div>
