--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 		<br><br><br>
 		<p style="font-size:12px" >保存二维码导航主页：dg.wigcw.cn 永不迷路 &nbsp;（可截图保存）</p>
-		<img src="img/qrcode.png" /> 
+		<img src="qrcode.png" /> 
 		
     </main>
     <footer class="container">
