--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <p>主用地址：  <a href="http://bbkl.uubu.ren"target="_blank" rel="noopener">bbkl.uubu.ren</a></p>
             <p>备用地址：  <a href="http://bbkl.dadc.vip"target="_blank" rel="noopener">bbkl.dadc.vip</a></p>
  <p>备用地址：  <a href="http://if.itclub.qqadg.com"target="_blank" rel="noopener">if.itclub.qqadg.com</a></p>
- <p>	活动推荐：	<a href="https://yunbusiness.ccb.com/gbchannel/e_report/outercoupon/#/CustomerActivity/20220524070000000140/YSM202107221121932" target="_blank"><strong>建行生活新用户领取满21减20元外卖券</a></p>	
+ <p>	活动推荐：	<a href="https://syx15.dmsp.ccb.com/a/100/7ZoAKePn/entry?launch_id=306263&share_ident=f06853bd-9aaa-4e74-8ccf-58a8f355ae0c&u=f06853bd-9aaa-4e74-8ccf-58a8f355ae0c" target="_blank"><strong>建行生活新用户领取满21减20元外卖券</a></p>	
         </div>
 		<br><br><br>
 		<p style="font-size:12px" >保存二维码导航主页：dg.wigcw.cn 永不迷路 &nbsp;（可截图保存）</p>
