--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     <main>
         <div>
             <h1>别不快乐DG引导页面</h1>
-   <p>主用地址：  <a href="http://bbkl.uubu.ren"target="_blank" rel="noopener">bbkl.uubu.ren</a></p>
-            <p>备用地址：  <a href="http://bbkl.dadc.vip"target="_blank" rel="noopener">bbkl.dadc.vip</a></p>
- <p>备用地址：  <a href="http://if.itclub.qqadg.com"target="_blank" rel="noopener">if.itclub.qqadg.com</a></p>
- <p>	活动推荐：	<a href="http://www.wigcw.cn/go/jhsh/" target="_blank"><strong>建行生活新用户领取满21减20元外卖券</a></p>	
+                 <p>主用地址：  <a href="https://bbkl.lszy.cc"target="_blank" rel="noopener">bbkl.lszy.cc</a></p>
+                 <p>备用地址：1  <a href="https://bbkl.nxxzz.net"target="_blank" rel="noopener">bbkl.nxxzz.net</a></p>
+                 <p>备用地址：2  <a href="https://bbkl.aadg.ren"target="_blank" rel="noopener">bbkl.aadg.ren</a></p>
+		 <p>备用地址：3  <a href="https://bbkl.uudg.vip"target="_blank" rel="noopener">bbkl.uudg.vip</a></p>
+                <p>	活动推荐：	<a href="http://www.wigcw.cn/go/jhsh/" target="_blank"><strong>建行生活新用户领取满21减20元外卖券</a></p>	
         </div>
 		<br><br><br>
 		<p style="font-size:12px" >保存二维码导航主页：dg.wigcw.cn 永不迷路 &nbsp;（可截图保存）</p>
