--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                  <p>备用地址：1  <a href="https://bbkl.nxxzz.net"target="_blank" rel="noopener">bbkl.nxxzz.net</a></p>
                  <p>备用地址：2  <a href="https://bbkl.aadg.ren"target="_blank" rel="noopener">bbkl.aadg.ren</a></p>
 		 <p>备用地址：3  <a href="https://bbkl.uudg.vip"target="_blank" rel="noopener">bbkl.uudg.vip</a></p>
-                <p>	活动推荐：	<a href="http://www.wigcw.cn/go/jhsh/" target="_blank"><strong>建行生活新用户领取满21减20元外卖券</a></p>
+                <p>	活动推荐：	<a href="https://mp.weixin.qq.com/s/XtluvJ2iB871HiItaMRIHQ" target="_blank"><strong>1元吃华莱士套餐+塔斯汀套餐 需4人助力新老用户都可</a></p>
 		   <p>	活动推荐：	<a href="https://www.wigcw.cn/about.html" target="_blank"><strong>联通话费100=92 可叠加 货不多随时️ 抓紧联系</a></p>	
         </div>
 		<br><br><br>
